footer mobile white space below fixed

--- a/themes/catching-the-spirit/style.css
+++ b/themes/catching-the-spirit/style.css
@@ -489,7 +489,7 @@ textarea {
     right: 0;
     height: 80px;
     width: 100%;
-    padding-left: 2.4rem;
+    padding-left: 2.45rem;
     -webkit-transform: translate3d(0, 0, 0); }
   .main-navigation .nav-mobile {
     padding: 0 2rem 0 2rem;
@@ -945,10 +945,12 @@ img {
           font-weight: 100;
           font-size: 16px; } }
   .site-footer .social-icon-footer {
-    margin: 0.5rem;
-    font-size: 32px; }
+    margin: 0.5rem 0.5rem 0 0.5rem;
+    font-size: 30px; }
     .site-footer .social-icon-footer a {
-      color: white; }
+      color: white;
+      margin-bottom: 0;
+      padding-bottom: 0; }
     @media (min-width: 642px) {
       .site-footer .social-icon-footer {
         font-size: 50px; } }
